--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>Coin price by country</title>
-    <style>
-    </style>
+
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/script.js"></script>
 </head>
 <body>
 
 <p>Coin price by country</p>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script>
-    $(document).ready(function() {
-
-    });
-</script>
 </body>
 </html>
