index.html commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Coin price by country</title>
-
+    <meta name="google-site-verification" content="iwHVjx4nI67N8ecwpbuFuWm2rJKM5fU5Jf79ZTxCNZE" />
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="lib/script.js"></script>
