--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="utf-8">
     <title>Coin price by country</title>
-    <meta name="google-site-verification" content="iwHVjx4nI67N8ecwpbuFuWm2rJKM5fU5Jf79ZTxCNZE" />
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="lib/script.js"></script>
-    <script data-ad-client="ca-pub-3748934366151508" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 
 <p>Coin price by country</p>
 <p>Bitcoin, Ethereim Korea Premium Check Site</p>
 <br />
+<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+    new PartnersCoupang.G({"id":468187,"template":"carousel","trackingCode":"AF4453206","width":"1000","height":"140"});
+</script>
 
 </body>
 </html>
