--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="가상화폐 커뮤니티, 비트코인 거래소, 코빗, 빗썸, 코인원, 업비트, 코인네스트, 코인레일, 비트렉스, 비트파이넥스, 폴로닉스, 이더리움, 비트코인, 비트코인 캐시, 비트코인 골드, 라이트코인, 대시코인, 이더리움 클래식, 리플코인, 퀀텀코인, 큐텀코인, 모네로 코인, 제트캐시, 비트코인 갤러리." />
+    <meta name="description" content="가상화폐 커뮤니티, 비트코인, 이더리움, 리플, 업비트, 빗썸 거래소 시세, 전망, 차트, 갤러리." />
+    <meta property="og:title" content="가상화폐 커뮤니티, 비트코인, 이더리움, 리플, 빗썸, 업비트 시세, 갤러리" />
+    <meta property="og:site_name" content="가상화폐 커뮤니티, 비트코인, 이더리움, 리플, 빗썸, 업비트 시세, 갤러리" />
+    <meta property="og:description" content="가상화폐 커뮤니티, 비트코인, 이더리움, 리플, 업비트, 빗썸 거래소 시세, 전망, 차트, 갤러리." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://v-if.github.io/" />
+    <meta property="og:locale" content="ko_KR" />
     <title>Coin price by country</title>
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
