--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 					<span></span>
 					<span></span>
 				</button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarApp">
+                    <ul class="navbar-nav">
+                        <li><a class="nav-link active" href="#home">Home</a></li>
+                        <li><a class="nav-link" href="#screenshots">Screens</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
@@ -72,7 +78,7 @@
                     <div class="big-tagline">
                         <h2>순풍순풍 - 라이딩 바람 지도</h2>
                         <p class="lead">라이딩시 순풍순풍 앱과 함께 순풍순풍 바람을 타고 가보세요.</p>
-                        <a data-scroll href="https://play.google.com/store/apps/details?id=com.tkpark.wind" class="btn btn-light btn-radius btn-brd"><i class="fa fa-play" aria-hidden="true"></i> GooglePlay </a>
+                        <a data-scroll href="https://play.google.com/store/apps/details?id=com.tkpark.wind" class="btn btn-light btn-radius btn-brd"><i class="fa fa-play" aria-hidden="true"></i> Google Play</a>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a data-scroll href="https://apps.apple.com/us/app/순풍순풍-라이딩-바람-지도/id1577293912" class="btn btn-light btn-radius btn-brd"><i class="fa fa-apple" aria-hidden="true"></i> App Store</a>
                     </div>
@@ -87,11 +93,206 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
+    <div id="screenshots" class="section wb">
+        <div class="container">
+            <div class="section-title text-center">
+                <h3>Screenshots of the App</h3>
+                <p class="lead">순풍순풍 앱 실행화면</p>
+            </div><!-- end title -->
+
+            <div class="owl-screenshots owl-carousel owl-theme">
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_01.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_01.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_02.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_02.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_03.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_03.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_04.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_04.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_05.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_05.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_06.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_06.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_01.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_01.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_02.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_02.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_03.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_03.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_04.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_04.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_05.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_05.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+                <div class="owl-screen">
+                    <div class="service-widget">
+                        <div class="post-media entry wow fadeIn">
+                            <a href="uploads/screenshot_06.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                            <img src="uploads/screenshot_06.png" alt="" class="img-fluid img-rounded">
+                            <div class="magnifier"></div>
+                        </div>
+                    </div><!-- end service -->
+                </div><!-- end col -->
+
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </div><!-- end section -->
+
+    <div class="parallax section noover" style="background-image:url('uploads/ben_img.jpg');">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-7 col-sm-12">
+                    <div class="customwidget text-left">
+                        <h1>Download our app</h1>
+                        <p>이 앱은 라이더들을 위해 만들어졌습니다. 라이딩을 할때 순풍순풍 바람을 타고 가보세요. 기상청 Open API를 활용하여 자전거 도로 근처의 동네예보를 표시하여 간접적으로 자전거도로의 바람, 강수, 기온을 확인할 수 있습니다. 이 앱이 마음에 드시면 마켓에서 평가, 친구들에게 추천, 공유 해 주세요.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><i class="flaticon-apple"></i> Available on Apple</li>
+                            <li class="list-inline-item"><i class="flaticon-android"></i> Available on Android</li>
+                        </ul><!-- end list -->
+                        <a href="#features" data-scroll class="btn btn-light btn-radius btn-brd">Learn More</a>
+                    </div>
+                </div><!-- end col -->
+                <div class="col-md-6 iphones hidden-sm">
+                    <div class="text-center move image-center hidden-sm hidden-xs">
+                        <img src="uploads/iphones.png" alt="" class="img-fluid wow fadeInUp">
+                    </div>
+                </div>
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </div><!-- end section -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class="widget clearfix">
+                        <div class="widget-title">
+                            <img src="images/logos/logo-app.png" alt="">
+                            <small>App Landing Template</small>                        </div>
+
+                    </div><!-- end clearfix -->
+                </div><!-- end col -->
+
+                <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+                    <div class="widget clearfix">
+                        <div class="widget-title">
+                            <h3>Contact Details</h3>
+                        </div>
+
+                        <ul class="footer-links">
+                            <li><a href="mailto:#">dev.tkpark@gmail.com</a></li>
+                            <li><a href="#">v-if.github.io</a></li>
+                            <li>Seoul, Republic of Korea</li>
+                        </ul><!-- end links -->
+                    </div><!-- end clearfix -->
+                </div><!-- end col -->
+
+                <div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
+                    <div class="widget clearfix">
+                        <div class="widget-title">
+                            <h3>Social</h3>
+                        </div>
+                        <ul class="footer-links">
+                            <li><a href="https://github.com/v-if"><i class="fa fa-github"></i> Github</a></li>
+                        </ul><!-- end links -->
+                    </div><!-- end clearfix -->
+                </div><!-- end col -->
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </footer><!-- end footer -->
+
     <div class="copyrights">
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">                    
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2021 <a href="#">Fire Studio</a></p>
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2021 <a href="#">Fire Studio Inc</a></p>
                 </div>
             </div>
         </div><!-- end container -->
