Google Search 등록

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="keywords" content="순풍순풍, 라이딩, 바람지도">
     <meta name="description" content="순풍순풍, 라이딩, 바람지도">
     <meta name="author" content="Fire Studio">
+    <meta name="google-site-verification" content="iwHVjx4nI67N8ecwpbuFuWm2rJKM5fU5Jf79ZTxCNZE" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
