모바일 디자인에 맞게 버튼 제거

--- a/index.html
+++ b/index.html
@@ -214,26 +214,6 @@
                                                   </div>
                                                   <div class="col-auto">
                                                       <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">5%</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">6%</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">7%</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">8%</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
                                                           <span class="text">10%</span>
                                                       </a>
                                                   </div>
@@ -273,27 +253,7 @@
                                                   </div>
                                                   <div class="col-auto">
                                                       <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">3년</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">4년</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">5년</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
                                                           <span class="text">10년</span>
-                                                      </a>
-                                                  </div>
-                                                  <div class="col-auto">
-                                                      <a href="#" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">15년</span>
                                                       </a>
                                                   </div>
                                                   <div class="col-auto">
@@ -349,7 +309,7 @@
                                         </div>
                                         <div class="form-group row">
                                           <label for="input3" class="col-sm-3 col-form-label">상환방법</label>
-                                          <div class="col-sm-9">
+                                          <div class="col-sm-4">
                                             <select class="custom-select my-1 mr-sm-2">
                                                 <option value="1">원리금균등상환</option>
                                                 <option value="2">원금균등상환</option>
@@ -486,28 +446,28 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-dark">월별 상환금</h6>
+                            <h6 class="m-0 font-weight-bold text-dark">회차별 상환금</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>회차</th>
+                                            <th>No</th>
                                             <th>상환금</th>
-                                            <th>납입원금</th>
+                                            <th>원금</th>
                                             <th>이자</th>
-                                            <th>납입원금계</th>
+                                            <th>원금계</th>
                                             <th>잔금</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
                                         <tr>
-                                            <th>회차</th>
+                                            <th>No</th>
                                             <th>상환금</th>
-                                            <th>납입원금</th>
+                                            <th>원금</th>
                                             <th>이자</th>
-                                            <th>납입원금계</th>
+                                            <th>원금계</th>
                                             <th>잔금</th>
                                         </tr>
                                     </tfoot>
