회차별 상환금 테이블 수정

--- a/index.html
+++ b/index.html
@@ -453,22 +453,22 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>No</th>
-                                            <th>상환금</th>
-                                            <th>원금</th>
-                                            <th>이자</th>
-                                            <th>원금계</th>
-                                            <th>잔금</th>
+                                            <th class="text-center">No</th>
+                                            <th class="text-center">상환금</th>
+                                            <th class="text-center">원금</th>
+                                            <th class="text-center">이자</th>
+                                            <th class="text-center">원금계</th>
+                                            <th class="text-center">잔금</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
                                         <tr>
-                                            <th>No</th>
-                                            <th>상환금</th>
-                                            <th>원금</th>
-                                            <th>이자</th>
-                                            <th>원금계</th>
-                                            <th>잔금</th>
+                                            <th class="text-center">No</th>
+                                            <th class="text-center">상환금</th>
+                                            <th class="text-center">원금</th>
+                                            <th class="text-center">이자</th>
+                                            <th class="text-center">원금계</th>
+                                            <th class="text-center">잔금</th>
                                         </tr>
                                     </tfoot>
                                     <tbody>
