input 숫자입력 스크립트 작업

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                             <div class="col-sm-9">
                                               <div class="form-row align-items-center">
                                                   <div class="col-auto">
-                                                      <input type="number" id="input1">원
+                                                      <input type="text" id="input1" value="0" style="text-align:right;">원
                                                   </div>
                                               </div>
                                             </div>
@@ -188,7 +188,7 @@
                                             <div class="col-sm-9">
                                               <div class="form-row align-items-center">
                                                   <div class="col-auto">
-                                                      <input type="number" id="input2">%
+                                                      <input type="text" id="input2" value="0" style="text-align:right;">%
                                                   </div>
                                               </div>
                                             </div>
@@ -232,7 +232,7 @@
                                             <div class="col-sm-9">
                                               <div class="form-row align-items-center">
                                                   <div class="col-auto">
-                                                      <input type="number" id="input3">개월
+                                                      <input type="text" id="input3" value="0" style="text-align:right;">개월
                                                   </div>
                                               </div>
                                             </div>
@@ -275,7 +275,7 @@
                                             <div class="col-sm-9">
                                               <div class="form-row align-items-center">
                                                   <div class="col-auto">
-                                                      <input type="number" id="input4">개월
+                                                      <input type="text" id="input4" value="0" style="text-align:right;">개월
                                                   </div>
                                               </div>
                                             </div>
