--- a/interest.html
+++ b/interest.html
@@ -379,7 +379,7 @@
                         <div class="col-xl-6 col-lg-5">
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-dark">그레프</h6>
+                                    <h6 class="m-0 font-weight-bold text-dark">그래프</h6>
                                 </div>
                                 <div class="card-body">
                                     <div class="chart-bar">
