--- a/interest.html
+++ b/interest.html
@@ -324,11 +324,11 @@
 					<div class="row" style="display: none;" id="resultDashboard">
 
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
+                            <div class="card border-left-primary shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">납입원금</div>
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">납입원금(Amount)</div>
                                             <div id="resultAmt1" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
@@ -344,7 +344,7 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">이자</div>
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">이자(Interest)</div>
                                             <div id="resultAmt2" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
@@ -356,11 +356,11 @@
                         </div>
 
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
+                            <div class="card border-left-success shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">만기수령액</div>
+                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">만기수령액</div>
                                             <div id="resultAmt3" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
