--- a/interest.html
+++ b/interest.html
@@ -141,7 +141,7 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800">복리 이자 계산기</h1>
-                    <p class="mb-4">복리마법 계산기</p>
+                    <p class="mb-4">복리마법 계산기 | Compound Interest Calculator</p>
 
                     <!-- Content Row -->
                     <div class="row">
@@ -328,7 +328,7 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">납입원금(Amount)</div>
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">납입원금(Principal)</div>
                                             <div id="resultAmt1" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
@@ -382,8 +382,40 @@
                                     <h6 class="m-0 font-weight-bold text-dark">그래프</h6>
                                 </div>
                                 <div class="card-body">
-                                    <div class="chart-bar">
+                                    <div class="chart-bar" style="height: 400px;">
                                         <canvas id="myBarChart"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-6 col-lg-5">
+                            <div class="card shadow mb-4" style="display: none;" id="resultTable">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-dark">연도별 수령금액</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                            <thead>
+                                                <tr>
+                                                    <th class="text-center">연도</th>
+                                                    <th class="text-center">납입원금</th>
+                                                    <th class="text-center">이자</th>
+                                                    <th class="text-center">수령액</th>
+                                                </tr>
+                                            </thead>
+                                            <tfoot>
+                                                <tr>
+                                                    <th class="text-center">연도</th>
+                                                    <th class="text-center">납입원금</th>
+                                                    <th class="text-center">이자</th>
+                                                    <th class="text-center">수령액</th>
+                                                </tr>
+                                            </tfoot>
+                                            <tbody>
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
@@ -391,7 +423,7 @@
 
                     </div>
 
-                    <!-- DataTales Example -->
+                    <!-- DataTales
                     <div class="card shadow mb-4" style="display: none;" id="resultTable">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-dark">연도별 수령금액</h6>
@@ -420,7 +452,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
                 <!-- /.container-fluid -->
