--- a/interest.html
+++ b/interest.html
@@ -141,7 +141,7 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800">복리 이자 계산기</h1>
-                    <p class="mb-4">복리마법 계산기 | Compound Interest Calculator</p>
+                    <p class="mb-4">Compound Interest Calculator | 복리마법 계산기</p>
 
                     <!-- Content Row -->
                     <div class="row">
@@ -197,7 +197,7 @@
 
                                         
                                         <div class="row">
-                                            <label for="input3" class="col-sm-3 col-form-label">적금기간</label>
+                                            <label for="input3" class="col-sm-3 col-form-label">기간</label>
                                             <div class="col-sm-9">
                                               <div class="form-row align-items-center">
                                                   <div class="col-auto">
@@ -226,13 +226,13 @@
                                                       </a>
                                                   </div>
                                                   <div class="col-auto">
-                                                      <a href="javascript:void(0);" onclick="addLoanPeriod(240);" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">20년</span>
+                                                      <a href="javascript:void(0);" onclick="addLoanPeriod(360);" class="btn btn-secondary btn-icon-split btn-sm">
+                                                          <span class="text">30년</span>
                                                       </a>
                                                   </div>
                                                   <div class="col-auto">
-                                                      <a href="javascript:void(0);" onclick="addLoanPeriod(360);" class="btn btn-secondary btn-icon-split btn-sm">
-                                                          <span class="text">30년</span>
+                                                      <a href="javascript:void(0);" onclick="addLoanPeriod(600);" class="btn btn-secondary btn-icon-split btn-sm">
+                                                          <span class="text">50년</span>
                                                       </a>
                                                   </div>
                                               </div>
